--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
 </head>
 <body>
 <h1>Our Favorite Superheroes:</h1>
+ <section>
+  <p>Wonderwoman</p>
+  <p>Star</p>
+ </section>
+ <section>
+  <h2>Heroes</h2>
  <p>Batman</p>
  <p>Spiderman</p>
  <p>IronMan</p>
+ </section>
  </body>
 </hmtl>
