--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
  <head>
    <title>HTML CSS Workshop</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>Our Favorite Superheroes:</h1>
