--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
  <head>
-   <title>HTML CSS Workshop</title>
+   <title>Mindy Salvador</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
