--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Mindy Salvador</title>
-  <link> rel="stylesheet" href="style.css">
+    <link> rel="stylesheet" href="style.css"> </link>
   </head>
   <body>
   <h1>Mindy Salvador</h1>
