--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-  <h1>Hi!</h1>
+  <h1>Hi! My name is Mindy Salvador.</h1>
   </body>
   </html>
