--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <style>
+      h1 { 
+        color: black;
+        font-family: InkFree;
+        font-size: 300%;
+      }
+    </style>
     <title>Mindy Salvador</title>
     <link rel="stylesheet" href="style.css">
+    
   </head>
   <body>
-  <h1>Hi! My name is Mindy Salvador.</h1>
+  <h1>Hi! Mindy Salvador.</h1>
   </body>
   </html>
