--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
   </head>
   <body>
   <h1 align="center">Mindy Salvador.</h1>
+  <h2>
+    <img src=C:\Users\salva\Desktop\mindy.jpg"/></h2>
   </body>
   </html>
