--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     
   </head>
   <body>
-  <h1 align="center">Mindy Salvador.</h1>
-  <h2>
-    <img src=C:\Users\salva\Desktop\mindy.jpg"/></h2>
+  <h1 align="center">Mindy Salvador</h1>
+ 
   </body>
   </html>
