--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   </head>
   <body>
   <h1 align="center">Mindy Salvador</h1>
+    <h2>HTML Image</h2>
+    <img src="mindy/mindy.jpg/>
  
   </body>
   </html>
