--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
         font-family: Ink Free;
         font-size: 300%;
       }
+      p {
+        color: black;
+        font-family: Ink Free;
+        font-size: 150%;
+      }
     </style>
     <title>Mindy Salvador</title>
     <link rel="stylesheet" href="style.css">
@@ -14,6 +19,7 @@
   </head>
   <body>
   <h1 align="center">Mindy Salvador</h1>
+    <p alight="center">"Anything's possible if you've got enough nerve" - J.K. Rowling</p>
    
   </body>
   </html>
