--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
   <h1 align="center">Mindy Salvador</h1>
-    <p alight="center">"Anything's possible if you've got enough nerve" - J.K. Rowling</p>
+    <p align="center">"Anything's possible if you've got enough nerve" - J.K. Rowling</p>
    
   </body>
   </html>
