--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <body>
   <h1 align="center">Mindy Salvador</h1>
     <p align="center">"Anything's possible if you've got enough nerve" - J.K. Rowling</p>
+    <img src="mindy.jpg" style="width:400px;height:500px;">
    
   </body>
   </html>
