--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
   <h1 align="center">Mindy Salvador</h1>
     <p align="center">"Anything's possible if you've got enough nerve" - J.K. Rowling</p>
-    <img src="mindy.jpg" style="width:400px;height:500px;">
+    <img align="center">src="mindy.jpg" style="width:300px;height:400px;">
    
   </body>
   </html>
