--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         font-family: Ink Free;
         font-size: 150%;
       }
+      img { 
+          width: 100%;
+      }
     </style>
     <title>Mindy Salvador</title>
     <link rel="stylesheet" href="style.css">
@@ -20,7 +23,8 @@
   <body>
   <h1 align="center">Mindy Salvador</h1>
     <p align="center">"Anything's possible if you've got enough nerve" - J.K. Rowling</p>
-    <img align="center">src="mindy.jpg" style="width:300px;height:400px;">
-   
+    <img src="mindy.jpg" class="center" width="128" height="128">\
+    <img src="mindy.jpg" class="center" width:128px; height:128px;">
+                                                    
   </body>
   </html>
