--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <h1 align="center">Mindy Salvador</h1>
     <p align="center">"Anything's possible if you've got enough nerve" - J.K. Rowling</p>
     
-    <img src="mindy.jpg" class="center" width:50px; height:60px;">
+    <img src="mindy.jpg" class="center" width:"300" height:"400">
                                                     
   </body>
   </html>
