--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       }
       img { 
         width: 100%;
+        class: center;
       }
     </style>
     <title>Mindy Salvador</title>
@@ -24,7 +25,7 @@
   <h1 align="center">Mindy Salvador</h1>
     <p align="center">"Anything's possible if you've got enough nerve" - J.K. Rowling</p>
     
-    <img src="mindy.jpg" class="center" style="width:40px; height:50px;">
+    <img src="mindy.jpg" style="class:center; width:100px; height:200px;">
                                                     
   </body>
   </html>
