--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <h1 align="center">Mindy Salvador</h1>
     <p align="center">"Anything's possible if you've got enough nerve" - J.K. Rowling</p>
     
-    <img src="mindy.jpg" class:"center" width:"100" height:"200">
+    <img src="mindy.jpg" class:"center" width="250" height="320">
                                                     
   </body>
   </html>
