--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
   <body>
   <h1 align="center">Mindy Salvador</h1>
     <p align="center">"Anything's possible if you've got enough nerve" - J.K. Rowling</p>
-    
-    <img src="mindy.jpg" width="250" height="320" align="middle">
+    <p1 class="aligncenter">
+   <img src="mindy.jpg" width="250" height="320">
+      </p>
                                                     
   </body>
   </html>
