--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <style>
-     ul {
+    ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  
 }
 
 li {
@@ -15,13 +15,16 @@ li {
 }
 
 li a {
-  display: block;
+  
   color: black;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
 
+li a:hover {
+  background-color: #d3d3d3;
+}
 
 </style>
       
@@ -36,7 +39,7 @@ li a {
   </h1>
       <ul>
   <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#news">Portfolio</a></li>
+  <li><a href="#portfolio">Portfolio</a></li>
   <li><a href="#contact">Contact</a></li>
   <li><a href="#about">About</a></li>
 </ul>
