--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@ li a:hover {
   <h1>
     <img src="MS.jpg" width="180" height="133">
   </h1>
+    </center>
+    
+    <center>
       <ul>
   <li><a class="active" href="#home">Home</a></li>
   <li><a href="#portfolio">Portfolio</a></li>
