--- a/index.html
+++ b/index.html
@@ -2,28 +2,35 @@
 <html>
   <head>
     <style>
-    ul {
+    body {margin: 0;}
+
+ul.topnav {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  
+  background-color: #333;
 }
 
-li {
-  float: left;
-}
+ul.topnav li {float: left;}
 
-li a {
-  
-  color: black;
+ul.topnav li a {
+  display: block;
+  color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
 
-li a:hover {
-  background-color: #d3d3d3;
+ul.topnav li a:hover:not(.active) {background-color: #111;}
+
+ul.topnav li a.active {background-color: #333;}
+
+ul.topnav li.right {float: right;}
+
+@media screen and (max-width: 600px) {
+  ul.topnav li.right, 
+  ul.topnav li {float: none;}
 }
 
 </style>
@@ -37,15 +44,15 @@ li a:hover {
   <h1>
     <img src="MS.jpg" width="180" height="133">
   </h1>
-    </center>
-    
-    <center>
-      <ul>
+    <ul class="topnav">
   <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#portfolio">Portfolio</a></li>
+  <li><a href="#news">News</a></li>
   <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
+  <li class="right"><a href="#about">About</a></li>
 </ul>
+
+
+
 
     </center>
      
