--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
   <head>
     <style>
-    body {margin: 0;}
-
-ul.topnav {
+   ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -12,25 +10,47 @@ ul.topnav {
   background-color: #333;
 }
 
-ul.topnav li {float: left;}
+li {
+  float: left;
+}
 
-ul.topnav li a {
-  display: block;
+li a, .dropbtn {
+  display: inline-block;
   color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
 
-ul.topnav li a:hover:not(.active) {background-color: #111;}
+li a:hover, .dropdown:hover .dropbtn {
+  background-color: gray;
+}
 
-ul.topnav li a.active {background-color: #333;}
+li.dropdown {
+  display: inline-block;
+}
 
-ul.topnav li.right {float: right;}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
 
-@media screen and (max-width: 600px) {
-  ul.topnav li.right, 
-  ul.topnav li {float: none;}
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #d3d3d3;}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 
 </style>
@@ -44,15 +64,18 @@ ul.topnav li.right {float: right;}
   <h1>
     <img src="MS.jpg" width="180" height="133">
   </h1>
-    <ul class="topnav">
-  <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li class="right"><a href="#about">About</a></li>
+   <ul>
+  <li><a href="#home">Home</a></li>
+  <li><a href="#About">About</a></li>
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">Portfolio</a>
+    <div class="dropdown-content">
+      <a href="#">Travel</a>
+      <a href="#">Photography</a>
+      <a href="#">Technology</a>
+    </div>
+  </li>
 </ul>
-
-
-
 
     </center>
      
