--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@ li.dropdown {
   </li>
 </ul>
 <p>
-  <img src="me.jpg" width="250" height="350" class="rotateimg60">
+  <img src="me.jpg" width="250" height="350">
   </p>
   <h2>
   <p class="serif">Hola!</p>
