--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@ li.dropdown {
   </li>
 </ul>
 <p>
-  <img src="me.jpg" width="250" height="350">
+  <img src="mindy.jpg" width="250" height="350">
   </p>
   <h2>
   <p class="serif">Hola!</p>
