--- a/contact.html
+++ b/contact.html
@@ -1,88 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <style>
-   ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-}
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <center>
+    <h1><p></br>
+  <a href="index.html">
+    <input type="image" src="MS.jpg" alt="camera" width="200" height="150">
+</a>
+</br>
+</h1>
 
-li {
-  float: left;
-}
-
-li a, .dropbtn {
-  display: inline-block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-li a:hover, .dropdown:hover .dropbtn {
-  background-color: gray;
-}
-
-li.dropdown {
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content a:hover {background-color: #d3d3d3;}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-</style>
-
-    <title>Mindy Salvador</title>
-
-
-
-  </head>
-  <body>
-    <center>
-      <a href="index.html">
-        <img src="MS.jpg" width="180" height="133">
-      </a>
-   <ul>
-  <li><a href="about.html">About</a></li>
-  <li><a href="contact.html">Contact</a></li>
-  <li class="dropdown">
-    <a href="javascript:void(0)" class="dropbtn">Portfolio</a>
-    <div class="dropdown-content">
-      <a href="#">Photography</a>
-      <a href="#">Technology</a>
-    </div>
-  </li>
-</ul>
-<h1>Contact</h1>
-<p>email: salvadormindy11@gmail.com</p>
-
-
-    </center>
-
-
-
-  </body>
-  </html>
+<a href="about.html"><button class="btn about">About</button></a>
+<a href="travel.html"><button class="btn travel diary">Travel Diary</button></a>
+<a href="photography.html"><button class="btn portfolio">Portfolio</button></a>
+<a href="contact.html"><button class="btn contact">Contact</button></a>
+<center>
+<h3>For questions and collaboration ideas please contact me:</h3>
+<p>salvadormindy11@gmail.com</p>
+</center>
+</body>
+</html>
