--- a/travel.html
+++ b/travel.html
@@ -27,7 +27,7 @@
   <div class="responsive">
     <div class="gallery">
   <a href="cebu.html">
-        <img src="cebu1.jpg" alt="Cinque Terre" width="600" height="400">
+        <img src="cebu1.jpg" alt="Cebu" width="600" height="400">
       </a>
       <p>
       <div class="desc">Cebu 2019</div>
@@ -38,7 +38,7 @@
   <div class="responsive">
     <div class="gallery">
       <a target="_blank" href="ny1.jpg">
-        <img src="ny1.jpg" alt="Forest" width="600" height="400">
+        <img src="ny1.jpg" alt="new york" width="600" height="400">
       </a>
       <p>
       <div class="desc">New York 2019</div>
