--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <a href="about.html"><button class="btn about">About</button></a>
     <a href="travel.html"><button class="btn travel diary">Travel Diary</button></a>
-    <a href="photography.html"><button class="btn portfolio">Portfolio</button></a>
+    <a href="index.html"><button class="btn portfolio">Portfolio</button></a>
     <a href="contact.html"><button class="btn contact">Contact</button></a>
   </center>
 <p>
