--- a/cebu.html
+++ b/cebu.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<title>Cebu</title>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
@@ -13,7 +14,7 @@
 
     <a href="about.html"><button class="btn about">About</button></a>
     <a href="travel.html"><button class="btn travel diary">Travel Diary</button></a>
-    <a href="photography.html"><button class="btn portfolio">Portfolio</button></a>
+    <a href="index.html"><button class="btn portfolio">Portfolio</button></a>
     <a href="contact.html"><button class="btn contact">Contact</button></a>
   </center>
 <p>
