--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
+<title>Contact</title>
 <head>
-  <title>contact</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
 </head>
@@ -16,7 +16,7 @@
 
 <a href="about.html"><button class="btn about">About</button></a>
 <a href="travel.html"><button class="btn travel diary">Travel Diary</button></a>
-<a href="photography.html"><button class="btn portfolio">Portfolio</button></a>
+<a href="index.html"><button class="btn portfolio">Portfolio</button></a>
 <a href="contact.html"><button class="btn contact">Contact</button></a>
 <center>
 <h3>For questions and collaboration ideas please contact me:</h3>
