--- a/travel.html
+++ b/travel.html
@@ -28,7 +28,7 @@
   <div class="responsive">
     <div class="gallery">
   <a href="cebu.html">
-        <img src="cebu1.jpg" alt="Cebu" width="600" height="400">
+        <img src="Cebu1.jpg" alt="Cebu" width="600" height="400">
       </a>
       <p>
       <div class="desc">Cebu 2019</div>
@@ -39,7 +39,7 @@
   <div class="responsive">
     <div class="gallery">
       <a target="_blank" href="ny1.jpg">
-        <img src="ny1.jpg" alt="NYC" width="600" height="400">
+        <img src="NY1.jpg" alt="NYC" width="600" height="400">
       </a>
       <p>
       <div class="desc">New York 2019</div>
