--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <div class="column">
         <img src="c.jpg" style="width:100%">
         <img src="g.jpg" style="width:100%">
+        <img src="h.jpg" style="width:100%">
         </div>
         </p>
         </body>
