--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <div class="column">
     <img src="e.jpg" style="width:100%">
     <img src="h.jpg" style="width:100%">
+    <img src="w.jpg" style="width:100%">
     </div>
     <div class="column">
     <img src="i.jpg" style="width:100%">
