--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <img src="f.jpg" style="width:100%">
     </div>
     <div class="column">
-    <img src="j.jpg" style="width:100%">
+    <img src="k.jpg" style="width:100%">
     <img src="d.jpg" style="width:100%">
     <img src="l.jpg" style="width:100%">
     </div>
