--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <div class="column">
     <img src="h.jpg" style="width:100%">
     <img src="w.jpg" style="width:100%">
+    <img src="j.jpg" style="width:100%">
     </div>
     <div class="column">
     <img src="k.jpg" style="width:100%">
