--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <div class="column">
         <img src="d.jpg" style="width:100%">
         <img src="g.jpg" style="width:100%">
+        <img src="p.jpg" style="width:100%">
         </div>
         </p>
         </body>
