--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
 <title>About</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<link rel="stylesheet" href="style.css">
 <style>
 * {
   box-sizing: border-box;
@@ -40,6 +40,10 @@ p {
       <a href="index.html">
       <input type="image" src="MS.jpg" alt="camera" width="200" height="150">
   </a></h1>
+  <a href="about.html"><button class="btn about">About</button></a>
+  <a href="travel.html"><button class="btn travel diary">Travel Diary</button></a>
+  <a href="index.html"><button class="btn portfolio">Portfolio</button></a>
+  <a href="contact.html"><button class="btn contact">Contact</button></a>
   <div class="row">
   <div class="column">
     <center><h2><img src="mindy.jpg" alt="mindy" width="400" height="500"></h2></center>
