--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
   </head>
   <body>
