--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@ p {
   <a href="contact.html"><button class="btn contact">Contact</button></a>
   <div class="row">
   <div class="column">
-    <center><h2><img src="mindy.jpg" alt="mindy" width="400" height="500"></h2></center>
+    <center><h2><img src="aboutme.jpg" alt="mindy" width="400" height="500"></h2></center>
 
   </div>
   <div class="column">
