--- a/about.html
+++ b/about.html
@@ -43,7 +43,8 @@ p {
   <a href="about.html"><button class="btn about">About</button></a>
   <a href="travel.html"><button class="btn travel diary">Travel Diary</button></a>
   <a href="index.html"><button class="btn portfolio">Portfolio</button></a>
-  <a href="contact.html"><button class="btn contact">Contact</button></a>
+  <a href="contact.html"><button class="btn contact">Contact</button></a></center>
+<center>
   <div class="row">
   <div class="column">
   <h2><img src="aboutme.jpg" alt="mindy" width="400" height="500"></h2>
