--- a/about.html
+++ b/about.html
@@ -34,8 +34,9 @@ p {
 }
 </style>
 </head>
+<center>
 <body>
-  <center>
+
     <h1>
       <a href="index.html">
       <input type="image" src="MS.jpg" alt="camera" width="200" height="150">
@@ -43,8 +44,8 @@ p {
   <a href="about.html"><button class="btn about">About</button></a>
   <a href="travel.html"><button class="btn travel diary">Travel Diary</button></a>
   <a href="index.html"><button class="btn portfolio">Portfolio</button></a>
-  <a href="contact.html"><button class="btn contact">Contact</button></a></center>
-<center>
+  <a href="contact.html"><button class="btn contact">Contact</button></a>
+
   <div class="row">
   <div class="column">
   <h2><img src="aboutme.jpg" alt="mindy" width="400" height="500"></h2>
@@ -60,6 +61,7 @@ I love to see the world and capture every moment, keeping memories, and sharing 
 </p>
   </div>
 </div>
-</center>
+
 </body>
+</center>
 </html>
