--- a/about.html
+++ b/about.html
@@ -48,7 +48,8 @@ p {
 
   <div class="row">
   <div class="column">
-  <h2><img src="aboutme.jpg" alt="mindy" class="center" width="400" height="500"></h2>
+  <h2><img src="aboutme.jpg" alt="mindy" width="400" height="500"></h2>
+
   </div>
   <div class="column">
     <p class="monospace">Hello!<br>I'm Mindy.</br></p>
