arizona new upload

--- a/travel.html
+++ b/travel.html
@@ -46,6 +46,15 @@
       </p>
     </div>
   </div>
-
+  <div class="responsive">
+    <div class="gallery">
+      <a target="_blank" href="arizona.jpg">
+        <img src="arizona.jpg" alt="NYC" width="600" height="400">
+      </a>
+      <p>
+      <div class="desc">Arizona 2019</div>
+      </p>
+    </div>
+  </div>
 </body>
 </html>
