--- a/travel.html
+++ b/travel.html
@@ -56,5 +56,15 @@
       </p>
     </div>
   </div>
+  <div class="responsive">
+    <div class="gallery">
+      <a target="_blank" href="biloxi.jpg">
+        <img src="biloxi.jpg" alt="NYC" width="600" height="400">
+      </a>
+      <p>
+      <div class="desc">Mississippi 2020</div>
+      </p>
+    </div>
+  </div>
 </body>
 </html>
