--- a/travel.html
+++ b/travel.html
@@ -31,7 +31,7 @@
         <img src="Cebu1.jpg" alt="Cebu" width="600" height="400">
       </a>
       <p>
-      <div class="desc">Cebu 2019</div>
+      <div class="desc">Cebu, PH 2019</div>
     </p>
     </div>
   </div>
