--- a/travel.html
+++ b/travel.html
@@ -58,6 +58,7 @@
   </div>
   <div class="responsive">
     <div class="gallery">
+      <a href="mississippi.html">
       <a target="_blank" href="biloxi.jpg">
         <img src="biloxi.jpg" alt="NYC" width="600" height="400">
       </a>
