--- a/travel.html
+++ b/travel.html
@@ -7,7 +7,7 @@
   <center>
     <h1><p></br>
   <a href="index.html">
-    <input type="image" src="MS.jpg" alt="camera" width="200" height="150">
+    <input type="image" src="logo.jpg" alt="camera" width="400" height="100">
 </a>
 </br>
 </h1>
