--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <center>
       <h1><br>
         <a href="index.html">
-        <input type="image" src="MS.jpg" alt="camera" width="200" height="150">
+        <input type="image" src="logo.jpg" alt="camera" width="500" height="200">
   </br> </h1>
 
     <a href="about.html"><button class="btn about">About</button></a>
