--- a/mississippi.html
+++ b/mississippi.html
@@ -9,7 +9,7 @@
     <center>
       <h1><br>
         <a href="index.html">
-        <input type="image" src="MS.jpg" alt="camera" width="200" height="150">
+        <input type="image" src="logo.jpg" alt="camera" width="600" height="150">
   </br> </h1>
 
     <a href="about.html"><button class="btn about">About</button></a>
