--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,26 @@
 <center>
 <h3>For questions and collaboration ideas please contact me:</h3>
 <p>salvadormindy11@gmail.com</p>
+<div class="container">
+  <form action="/action_page.php">
+    <label for="fname">First Name</label>
+    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+    <label for="lname">Last Name</label>
+    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+    <label for="country">Country</label>
+    <select id="country" name="country">
+      <option value="usa">USA</option>
+    </select>
+
+    <label for="message">Message</label>
+    <textarea id="message" name="message" placeholder="Write something.." style="height:200px"></textarea>
+
+    <input type="submit" value="Send">
+  </form>
+</div>
+
 </center>
 </body>
 </html>
