--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Portfolio</title>
+  <title>Mindy Salvador</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="favi" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
