--- a/about.html
+++ b/about.html
@@ -25,6 +25,11 @@ I love to see the world and capture every moment, keeping memories, and sharing 
 </p>
   </div>
 </div>
+<div>
+<h3>
+  <a href="https://www.instagram.com/salvadormindy/">
+    <input type="image" src="igicon.png" alt="ig" width="50" height="50"
+  </h3></div>
 
 </body>
 </center>
