--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@ I love to see the world and capture every moment, keeping memories, and sharing 
 <div>
 <h3>
   <a href="https://www.instagram.com/salvadormindy/">
-    <input type="image" src="igicon.png" alt="ig" width="50" height="50"
+    <input type="image" src="Igg.png" alt="ig" width="50" height="50"
   </h3></div>
 
 </body>
