--- a/travel.html
+++ b/travel.html
@@ -11,38 +11,14 @@
 </a>
 </br>
 </h1>
-
-<!-- The four columns -->
-<div class="row">
-  <div class="column">
-    <img src="Cebu1.jpg" alt="Cebu" style="width:100%" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="ny1.jpg" alt="NYC" style="width:100%" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="arizona.jpg" alt="Cactus" style="width:100%" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="biloxi.jpg" alt="Girl" style="width:100%" onclick="myFunction(this);">
-  </div>
-</div>
+</center>
 
 <div class="container">
-  <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-  <img id="expandedImg" style="width:100%">
-  <div id="imgtext"></div>
+  <img src="Cebu1.jpg" alt="Cebu" style="width:50%;">
+  <div class="content">
+    <h1>Cebu, PH</h1>
+  </div>
 </div>
-
-<script>
-function myFunction(imgs) {
-  var expandImg = document.getElementById("expandedImg");
-  var imgText = document.getElementById("imgtext");
-  expandImg.src = imgs.src;
-  imgText.innerHTML = imgs.alt;
-  expandImg.parentElement.style.display = "block";
-}
-</script>
 
 </body>
 </html>
