--- a/travel.html
+++ b/travel.html
@@ -16,8 +16,10 @@
 <div class="container">
   <img src="Cebu1.jpg" alt="Cebu" style="width:50%;">
   <div class="content">
+    <center>
     <h1>Cebu, PH</h1>
   </div>
+</center>
 </div>
 
 </body>
