--- a/travel.html
+++ b/travel.html
@@ -1,25 +1,44 @@
 <!DOCTYPE html>
 <html>
-<title>Blog</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style.css">
+<head>
+  <title>Blog</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+</head>
+
 <body>
-  <center>
-    <h1><p></br>
-  <a href="index.html">
-    <input type="image" src="logo.jpg" alt="camera" width="500" height="100">
-</a>
-</br>
-</h1>
-</center>
 
 <div class="container">
-  <img src="Cebu1.jpg" alt="Cebu" style="width:50%;">
-  <div class="content">
-    <center>
-    <h1>Cebu, PH</h1>
-  </div>
-</center>
+
+    <div class="row">
+
+      <div class="col-sm col-md-4">
+        <img class="img-fluid" src="Cebu1.jpg" alt="Cebu">
+        <div class="content">
+          <center>
+          <h1>Cebu, PH</h1>
+        </div>
+      </div>
+
+      <div class="col-sm col-md-4">
+        <img class="img-fluid" src="Cebu1.jpg" alt="Cebu">
+        <div class="content">
+          <center>
+          <h1>Cebu, PH</h1>
+        </div>
+      </div>
+
+      <div class="col-sm col-md-4">
+        <img class="img-fluid" src="Cebu1.jpg" alt="Cebu" >
+        <div class="content">
+          <center>
+          <h1>Cebu, PH</h1>
+        </div>
+      </div>
+
+    </div>
+
 </div>
 
 </body>
