--- a/index.html
+++ b/index.html
@@ -4,46 +4,35 @@
   <meta charset="utf-8">
   <title>Mindy Salvador</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <link rel="icon" href="favi" type="image/x-icon">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <center>
-      <h1><br>
-        <a href="index.html">
-        <input type="image" src="logo.jpg" alt="camera" width="500" height="100">
-  </br> </h1>
+      <header class="header">
+        <nav class="navbar navbar-style">
+          <div class="container">
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
 
-    <a href="about.html"><button class="btn about">About</button></a>
-    <a href="travel.html"><button class="btn travel diary">Travel Diary</button></a>
-    <a href="index.html"><button class="btn portfolio">Portfolio</button></a>
-    <a href="contact.html"><button class="btn contact">Contact</button></a>
-  </center>
-<p>
-<!-- Photo Grid -->
-<div class="row">
-  <div class="column">
-    <img src="e.jpg" style="width:100%">
-    <img src="i.jpg" style="width:100%">
-    <img src="f.jpg" style="width:100%">
-    <img src="qq.jpg" style="width:100%">
-  </div>
-    <div class="column">
-    <img src="h.jpg" style="width:100%">
-    <img src="w.jpg" style="width:100%">
-    <img src="j.jpg" style="width:100%">
-    </div>
-    <div class="column">
-    <img src="k.jpg" style="width:100%">
-    <img src="c.jpg" style="width:100%">
-    <img src="l.jpg" style="width:100%">
-    </div>
-    <div class="column">
-        <img src="d.jpg" style="width:100%">
-        <img src="g.jpg" style="width:100%">
-        <img src="p.jpg" style="width:100%">
-        </div>
-        </p>
+                <a href=""><img class="logo" src="logo.png"></a>
+              </div>
+              <div class="collapse navbar-collapse" id="micon">
+              <ul class="nav navbar-nav navbar-right">
+              <li><a href="">Portfolio</a><li>
+              <li><a href="">Blog</a><li>
+              <li><a href="">About</a><li>
+              <li><a href="">Contact</a><li>
+              </ul>
+
+</div>
+</nav>
+
+
         </body>
         </html>
