--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-style">
           <div class="container">
               <div class="navbar-header">
-                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="">
+                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#micon">
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
@@ -22,7 +22,7 @@
 
                 <a href=""><img class="logo" src="logo.png"></a>
               </div>
-
+              <div class="collapse navbar-collapse" id="micon">
               <ul class="nav navbar-nav navbar-right">
               <li><a href="">Portfolio</a><li>
               <li><a href="">Blog</a><li>
