--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   </head>
   <body>
+
       <header class="header">
         <nav class="navbar navbar-style">
           <div class="container">
@@ -22,7 +23,7 @@
                   <span class="icon-bar"></span>
                   </button>
 
-                <a href=""><img class="logo" src="logo.png"></a>
+              <a href=""><img class="logo" src="logo.png"></a>
               </div>
               <div class="collapse navbar-collapse" id="micon">
               <ul class="nav navbar-nav navbar-right">
@@ -33,8 +34,10 @@
               </ul>
 
             </div>
+          </div>
+        </nav>
 
-          </nav>
+    </header>
 
 
         </body>
