--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
               </div>
               <div class="collapse navbar-collapse" id="micon">
               <ul class="nav navbar-nav navbar-right">
-              <li><a href="">Portfolio</a><li>
-              <li><a href="">Blog</a><li>
-              <li><a href="">About</a><li>
-              <li><a href="">Contact</a><li>
+              <li><a href="" class="cool-link">Portfolio</a><li>
+              <li><a href="" class="cool-link">Blog</a><li>
+              <li><a href="" class="cool-link">About</a><li>
+              <li><a href="" class="cool-link">Contact</a><li>
               </ul>
 
             </div>
